diesel_compile_tests/tests/fail/derive/bad_treat_none_as_null.stderr
error: expected `=`
  --> $DIR/bad_treat_none_as_null.rs:13:28
   |
13 | #[diesel(treat_none_as_null("true"))]
   |                            ^^^^^^^^

error: unexpected end of input, expected `=`

  = help: The correct format looks like `#[diesel(treat_none_as_null = true)]`

  --> $DIR/bad_treat_none_as_null.rs:21:9
   |
21 | #[diesel(treat_none_as_null)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: expected boolean literal
  --> $DIR/bad_treat_none_as_null.rs:29:31
   |
29 | #[diesel(treat_none_as_null = "foo")]
   |                               ^^^^^
